fdo#37246 PDF Import: Color to string conversion fix

Change-Id: I5ec9f0246f6c2d1b12a389906d04133b2f5a6f9f
Reviewed-on: https://gerrit.libreoffice.org/8106
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>